--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,22 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #121212;
+  color: #fff;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.card {
+  background-color: #1f1f1f;
+  min-width: 600px;
+}
+
+.btn-primary {
+  background-color: #03DAC6;
+  border-color: #03DAC6;
+  outline: #03DAC6;
 }
