--- a/src/styles/topSection.module.scss
+++ b/src/styles/topSection.module.scss
@@ -1,3 +1,12 @@
 .topSection {
-    
+    min-height: 80px;
+    display: flex;
+    align-items: center;
+    input {
+        background-color: transparent !important;
+        color: #fff !important;
+        &placeholder {
+            color: unset;
+        }
+    }
 }
