--- a/src/styles/topSection.module.scss
+++ b/src/styles/topSection.module.scss
@@ -2,6 +2,7 @@
     min-height: 80px;
     display: flex;
     align-items: center;
+    width: 100%;
     input {
         background-color: transparent !important;
         color: #fff !important;
