--- a/src/styles/topSection.module.scss
+++ b/src/styles/topSection.module.scss
@@ -5,9 +5,12 @@
     width: 100%;
     input {
         background-color: transparent !important;
-        color: #fff !important;
+        color: #fff;
         &placeholder {
             color: unset;
+        }
+        &:focus {
+            color: #fff;
         }
     }
 }
