--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -10,4 +10,18 @@
             color: #333 !important;
         }
     }
+    #notes {
+        div {
+            &:nth-child(2) {
+                background-color: #F8F9FA;
+                border: 1px solid rgba(0, 0, 0, .125);
+                div {
+                    p {
+                        background-color: #dbdbdb;
+                        color: #333;
+                    }
+                }
+            }
+        }
+    }
 }
