update slider colors

--- a/src/styles/toggleSlider.module.scss
+++ b/src/styles/toggleSlider.module.scss
@@ -1,14 +1,14 @@
 :root {
     /** sunny side **/
-    --blue-background: #C2E9F6;
-    --blue-border: #72cce3;
-    --blue-color: #96dcee;
-    --yellow-background: #fffaa8;
-    --yellow-border: #f5eb71;
+    --blue-background: #393b3c;
+    --blue-border: #393b3c;
+    --blue-color: #393b3c;
+    --yellow-background: #fff;
+    --yellow-border: #333;
     /** dark side **/
-    --indigo-background: #808fc7;
-    --indigo-border: #5d6baa;
-    --indigo-color: #6b7abb;
+    --indigo-background: #fff;
+    --indigo-border: #fff;
+    --indigo-color: #fff;
     --gray-border: #e8e8ea;
     --gray-dots: #e8e8ea;
     /** general **/
