--- a/src/styles/toggleSlider.module.scss
+++ b/src/styles/toggleSlider.module.scss
@@ -21,7 +21,7 @@
 
 .toggle_checkbox:checked {
     /** This will all flip from sun to moon **/
-    /** Change the label color **/
+    /** Change the label colorr **/
 }
 
 .toggle_checkbox:checked~.background {
