--- a/src/styles/toggleSlider.module.scss
+++ b/src/styles/toggleSlider.module.scss
@@ -1,14 +1,14 @@
 :root {
     /** sunny side **/
-    --blue-background: #393b3c;
-    --blue-border: #393b3c;
-    --blue-color: #393b3c;
+    --blue-background: #fff;
+    --blue-border: #fff;
+    --blue-color: #fff;
     --yellow-background: #fff;
     --yellow-border: #333;
     /** dark side **/
-    --indigo-background: #fff;
-    --indigo-border: #fff;
-    --indigo-color: #fff;
+    --indigo-background: #393b3c;
+    --indigo-border: #393b3c;
+    --indigo-color: #393b3c;
     --gray-border: #e8e8ea;
     --gray-dots: #e8e8ea;
     /** general **/
