--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,8 @@
   border-color: unset !important;
   box-shadow: none;
 }
+
+.project.active {
+  background-color: #333;
+  color: #fff !important;
+}
